display tasks inside lists

--- a/app/views/lists/_list.html.erb
+++ b/app/views/lists/_list.html.erb
@@ -1,7 +1,15 @@
 <div id="<%= dom_id list %>">
   <p>
-    <strong>Name:</strong>
+    <strong>List:</strong>
     <%= list.name %>
   </p>
 
 </div>
+
+<ul>
+  <% list.tasks.each do |task| %>
+    <li>
+      <%= render task %>
+    </li>
+  <% end %>
+</ul>
