--- a/app/views/tasks/_task.html.erb
+++ b/app/views/tasks/_task.html.erb
@@ -1,12 +1,6 @@
 <div id="<%= dom_id task %>">
   <p>
-    <strong>Name:</strong>
+    <strong>Task:</strong>
     <%= task.name %>
   </p>
-
-  <p>
-    <strong>List:</strong>
-    <%= task.list_id %>
-  </p>
-
 </div>
