--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -5,7 +5,7 @@
 <div id="lists">
   <ul data-controller="sortable">
     <% @lists.each do |list| %>
-      <li data-sortable-id="<%= list.id %>">
+      <li data-sortable-update-url="<%= sort_list_path(list) %>">
         <%= render list %>
       </li>
     <% end %>
