--- a/app/views/lists/_list.html.erb
+++ b/app/views/lists/_list.html.erb
@@ -8,7 +8,7 @@
 
 </div>
 
-<ul data-controller="sortable">
+<ul data-controller="sortable" data-sortable-group-value="tasks" data-sortable-list-id="<%= list.id %>">
   <% list.tasks.rank(:row_order).each do |task| %>
     <li data-sortable-update-url="<%= sort_task_path(task) %>">
       <%= render task %>
